# anysearch

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: deploy-matrix.yml
docs/: PROVIDERS.md
docs/tools/search_matrix/: README.md  bundle.json  data_utils.py  llms.txt  schema.json  updated.json
docs/tools/search_matrix/data/: brave.json  brave_answers.json  duckduckgo.json  exa.json  firecrawl.json  gemini.json  google_pse.json  jina.json  kagi.json  keiro.json  linkup.json  parallel.json  parallel_task.json  perplexity.json  perplexity_sonar.json  searchapi.json  searxng.json  serpapi.json  serpapi_baidu.json  serpapi_bing.json  serpapi_duckduckgo.json  serpapi_google.json  serpapi_yahoo.json  serpapi_yandex.json  serper.json  tavily.json  tavily_research.json  you.json  you_research.json
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: client.ts  errors.ts  http.ts  index.ts  router.ts  types.ts
js/src/mcp/: migrate.ts  server.ts
js/src/providers/: base.ts  brave.ts  duckduckgo.ts  exa.ts  firecrawl.ts  gemini.ts  googlePse.ts  index.ts  jina.ts  kagi.ts  keiro.ts  linkup.ts  parallel.ts  perplexity.ts  searchapi.ts  searxng.ts  serpapi.ts  serpapiEngines.ts  serper.ts  tavily.ts  you.ts
js/test/: core.test.ts  mcp.test.ts  serpapiEngines.test.ts
python/: README.md  pyproject.toml
python/src/anysearch/: __init__.py  _http.py  client.py  exceptions.py  router.py  types.py
python/src/anysearch/mcp/: __init__.py  migrate.py  server.py
python/src/anysearch/providers/: __init__.py  base.py  brave.py  duckduckgo.py  exa.py  firecrawl.py  gemini.py  google_pse.py  jina.py  kagi.py  keiro.py  linkup.py  parallel.py  perplexity.py  searchapi.py  searxng.py  serpapi.py  serpapi_engines.py  serper.py  tavily.py  you.py
python/src/anysearch/proxy/: __init__.py  __main__.py  server.py
python/tests/: test_core.py  test_mcp_and_migrate.py  test_proxy.py  test_serpapi_engines.py
scripts/: generate_search_matrix_data.py  matrix_import_hooks.mjs  search_matrix_provider_meta.py  verify_matrix_page.mjs
worker/: matrix.js
